fix(header): remove last slash from homepage prop

--- a/common/after_header.html
+++ b/common/after_header.html
@@ -1,7 +1,7 @@
 <dc-header
   class="hydrated"
   community="https://community.debtcollective.org"
-  homepage="https://debtcollective.org/"
+  homepage="https://debtcollective.org"
   host="https://community.debtcollective.org"
   id="dc-header"
 ></dc-header>
